<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:contentDescription="@string/accessibility_advance_search"
    android:orientation="vertical">

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="300dp"
        android:gravity="center"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageView android:id="@+id/search_text_icon"
            android:src="@drawable/baseline_search_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:scaleType="fitCenter"
            android:padding="8dp"
            android:contentDescription="@string/search">

        </ImageView>

            <AutoCompleteTextView
                android:id="@+id/editSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/abvLineColor"
                android:textCursorDrawable="@null"
                android:singleLine="true">
            </AutoCompleteTextView >

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/ibu_text"
                android:layout_gravity="center"
                android:text="@string/ibu"

                android:textStyle="bold" />

            <com.appyvet.materialrangebar.RangeBar xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/rangebar_ibu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                app:mrb_barWeight="6dp"
                app:mrb_connectingLineColor="@color/ibuLineColor"
                app:mrb_pinColor="@color/pinColor"
                app:mrb_pinMaxFont="15sp"
                app:mrb_pinMinFont="12sp"
                app:mrb_pinRadius="14dp"
                app:mrb_pinTextColor="@color/tabTextColor"
                app:mrb_rangeBar="true"
                app:mrb_rangeBarPaddingBottom="30dp"
                app:mrb_rangeBar_rounded="true"
                app:mrb_selectorBoundaryColor="@color/white"
                app:mrb_selectorBoundarySize="2dp"
                app:mrb_selectorColor="@color/ibuLineColor"
                app:mrb_selectorSize="12dp"
                app:mrb_temporaryPins="true"
                app:mrb_tickBottomLabels="@array/ticks_labels_ibu"
                app:mrb_tickDefaultColor="@color/ibuLineColor"
                app:mrb_tickDefaultLabel="label"
                app:mrb_tickEnd="100"
                app:mrb_tickHeight="7dp"
                app:mrb_tickInterval="10"
                app:mrb_tickStart="0" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/abv_text"
                android:layout_gravity="center"
                android:text="@string/ABV"

                android:textStyle="bold" />

            <com.appyvet.materialrangebar.RangeBar xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/rangebar_abv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                app:mrb_barWeight="6dp"
                app:mrb_connectingLineColor="@color/abvLineColor"
                app:mrb_pinColor="@color/pinColor"
                app:mrb_pinMaxFont="15sp"
                app:mrb_pinMinFont="12sp"
                app:mrb_pinRadius="14dp"
                app:mrb_pinTextColor="@color/tabTextColor"
                app:mrb_rangeBar="true"
                app:mrb_rangeBarPaddingBottom="30dp"
                app:mrb_rangeBar_rounded="true"
                app:mrb_selectorBoundaryColor="@color/white"
                app:mrb_selectorBoundarySize="2dp"
                app:mrb_selectorColor="@color/abvLineColor"
                app:mrb_selectorSize="12dp"
                app:mrb_temporaryPins="true"
                app:mrb_tickBottomLabels="@array/ticks_labels_abv"
                app:mrb_tickDefaultColor="@color/abvLineColor"
                app:mrb_tickDefaultLabel="label"
                app:mrb_tickEnd="10"
                app:mrb_tickHeight="7dp"
                app:mrb_tickInterval="1"
                app:mrb_tickStart="0" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/color_text"
                android:layout_gravity="center"
                android:text="@string/srm"

                android:textStyle="bold" />

            <com.appyvet.materialrangebar.RangeBar xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/rangebar_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                app:mrb_pinColor="@color/pinColor"
                app:mrb_pinMaxFont="15sp"
                app:mrb_pinMinFont="12sp"
                app:mrb_pinRadius="14dp"
                app:mrb_pinTextColor="@color/tabTextColor"
                app:mrb_rangeBar="true"
                app:mrb_rangeBarPaddingBottom="30dp"
                app:mrb_rangeBar_rounded="true"
                app:mrb_leftSelectorColor="@color/srm_2"
                app:mrb_rightSelectorColor="@color/srm_41"
                app:mrb_selectorSize="12dp"
                app:mrb_temporaryPins="true"
                app:mrb_tickBottomLabels="@array/ticks_labels_srm"
                app:mrb_tickColors="@array/ticks_color_srm"
                app:mrb_connectingLineColors="@array/connecting_colors_srm"
                app:mrb_connectingLineWeight="6dp"
                app:mrb_tickDefaultLabel="label"
                app:mrb_tickEnd="41"
                app:mrb_tickHeight="7dp"
                app:mrb_tickInterval="4"
                app:mrb_tickStart="1" />
        </TableRow>
    </TableLayout>

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="50dp">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/filterReset"
                android:text="@string/reset" />

            <Button
                android:id="@+id/filterSearch"
                android:layout_gravity="center"
                android:text="@string/search" />
        </TableRow>
    </TableLayout>

</LinearLayout>
